--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Hotel Posada Las Lengas</title>
 </head>
@@ -14,7 +14,7 @@
 
     <header class="navbar navbar-expand-lg bg-light-subtle border-bottom shadow-sm">
         <div class="container">
-            <a class="navbar-brand fs-4" href="/index.html">
+            <a class="navbar-brand fs-4" href="../index.html">
                 <img src="./images/logo.png" alt="Logo hotel" class="w-25"> Hotel Posada Las Lengas
             </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,18 +23,18 @@
         <nav class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav fs-4">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/habitaciones.html">Habitaciones</a>
+                    <a class="nav-link" href="../pages/habitaciones.html">Habitaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/restaurante.html">Restaurante</a>
+                    <a class="nav-link" href="../pages/restaurante.html">Restaurante</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/informacion.html">Información</a>
+                    <a class="nav-link" href="../pages/informacion.html">Información</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -86,17 +86,17 @@
                     <div class="carta">
                         <h3>Habitaciones</h3>
                         <p>Contamos con una amplia gama de habitaciones para satisfacer las necesidades y deseos de todos nuestros huéspedes.</p>
-                        <button><a href="/pages/habitaciones.html">Ver más</a></button>
+                        <button><a href="./pages/habitaciones.html">Ver más</a></button>
                     </div>
                     <div class="carta">
                         <h3>Restaurante</h3>
                         <p>Dentro del hotel encontrarás un Restaurante para que disfrutes de una experiencia gastronómica excepcional. </p>
-                        <button><a href="/pages/restaurante.html">Ver más</a></button>
+                        <button><a href="./pages/restaurante.html">Ver más</a></button>
                     </div>
                     <div class="carta">
                         <h3>28 de Noviembre</h3>
                         <p>La ciudad se encuentra rodeada por montañas y bosques, lo que la convierte en un lugar ideal para su descanso y goce.</p>
-                        <button><a href="/pages/informacion.html">Ver más</a></button>
+                        <button><a href="./pages/informacion.html">Ver más</a></button>
                     </div>
                 </div>
             </div>
