--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Hotel Posada Las Lengas</title>
 </head>
@@ -13,8 +13,8 @@
 
     <header class="navbar navbar-expand-lg bg-light-subtle border-bottom shadow-sm">
         <div class="container">
-            <a class="navbar-brand fs-4" href="/index.html">
-                <img src="/images/logo.png" alt="Logo hotel" class="w-25"> Hotel Posada Las Lengas
+            <a class="navbar-brand fs-4" href="../index.html">
+                <img src="../images/logo.png" alt="Logo hotel" class="w-25"> Hotel Posada Las Lengas
             </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,18 +22,18 @@
         <nav class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav fs-4">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/habitaciones.html">Habitaciones</a>
+                    <a class="nav-link" href="../pages/habitaciones.html">Habitaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/restaurante.html">Restaurante</a>
+                    <a class="nav-link" href="../pages/restaurante.html">Restaurante</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/informacion.html">Información</a>
+                    <a class="nav-link" href="../pages/informacion.html">Información</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
