--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="navbar navbar-expand-lg bg-light-subtle border-bottom shadow-sm">
         <div class="container">
-            <a class="navbar-brand fs-4" href="../index.html">
+            <a class="navbar-brand fs-4" href="./index.html">
                 <img src="./images/logo.png" alt="Logo hotel" class="w-25"> Hotel Posada Las Lengas
             </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,18 +23,18 @@
         <nav class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav fs-4">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/habitaciones.html">Habitaciones</a>
+                    <a class="nav-link" href="./pages/habitaciones.html">Habitaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/restaurante.html">Restaurante</a>
+                    <a class="nav-link" href="./pages/restaurante.html">Restaurante</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/informacion.html">Información</a>
+                    <a class="nav-link" href="./pages/informacion.html">Información</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
