--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,9 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <title>Hotel Posada Las Lengas</title>
+
+    <meta name="description" content="Descubre nuestro hotel en 28 de Noviembre. Contamos con un restaurante que ofrece servicio de entrega a domicilio, para que puedas disfrutar de nuestras deliciosas comidas sin salir de tu habitación. ¡Contáctanos ahora!">">
+    <title>Contacto para delivery en 28 de Noviembre | Hotel Posada Las Lengas</title>
 </head>
 <body>
+
+    <!--header-->
 
     <header class="navbar navbar-expand-lg bg-light-subtle border-bottom shadow-sm">
         <div class="container">
@@ -19,6 +23,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <!--nav-->
         <nav class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav fs-4">
                 <li class="nav-item">
@@ -40,74 +45,79 @@
         </div>
     </header>
 
+    <!--banner-->
+
     <main>
         <section id="banner-5">
             <h2>¿Tienes alguna pregunta?</h2>
             <h3>Rellená el formulario y nos comunicaremos con usted a la brevedad</h3>
         </section>
 
+        <!--Información de contacto-->
+
         <section class="contacto">
 
-            <div class="row"> 
+            <div class="container-fluid">
 
-                <div class="col-12 col-lg-6">
-                    <h3 class="text-center display-4 mt-5 fw-bold">Contacta</h3>
-                    <h2 class="text-center display-3">Hotel Posada Las Lengas</h2>
-                    <ul class="text-center fs-5">
-                        <li><a href="#"> <i class="fa-solid- fa-mobile">
-                        </i>"2966622805"</a></li>
-                        <li><a href="#"> <i class="fa-solid fa-phone">
-                        </i>"02902482373"</a></li>
-                        <li><a href="#"> <i class="fa-regular fa-envelope">
-                        </i>"pininoab@hotmail.com"</a></li>
-                        <li><a href="#"> <i class="fa-solid fa-map">
-                        </i>"Libertad 468, Veintiocho de Noviembre"</a></li>
-                    </ul>
-                </div>
+                <div class="row"> 
 
-                <div class="col-12 col-lg-6">
-                    <form action="">
-                        <div class=" text-center text-lg-start mb-2 mt-4">
-                            <label for="nombre">Nombre</label>
-                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="ej: Gabriel">
-                        </div> 
+                    <div class="col-12 col-lg-6">
+                        <h3 class="text-center display-4 mt-5 fw-bold">Contacta</h3>
+                        <h2 class="text-center display-3">Hotel Posada Las Lengas</h2>
+                        <ul class="text-center fs-5">
+                            <li><a href="#"> <i class="fa-solid fa-mobile">
+                            </i> "2966622805"</a></li>
+                            <li><a href="#"> <i class="fa-solid fa-phone">
+                            </i>"02902482373"</a></li>
+                            <li><a href="#"> <i class="fa-regular fa-envelope">
+                            </i>"pininoab@hotmail.com"</a></li>
+                            <li><a href="#"> <i class="fa-solid fa-map">
+                            </i>"Libertad 468, Veintiocho de Noviembre"</a></li>
+                        </ul>
+                    </div>
 
-                        <div class="text-center text-lg-start mb-2">
-                            <label for="apellido">Apellido</label>
-                            <input type="text" class="form-control" name="apellido" id="apellido" placeholder="ej: Pacheco">
-                        </div> 
+                    <!--estructura formulario de contacto-->
 
-                        <div class="text-center text-lg-start mb-2">
-                            <label for="correo">Correo electrónico</label>
-                            <input type="text" class="form-control" name="correo" id="correo" placeholder="ej: Gabrielpacheco@gmail.com">
-                        </div> 
+                    <div class="col-12 col-lg-6">
+                        <form action="">
+                            <div class=" text-center text-lg-start mb-2 mt-4">
+                                <label for="nombre">Nombre</label>
+                                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="ej: Gabriel">
+                            </div> 
 
-                        <div class="text-center text-lg-start mb-2">
-                            <label for="mensaje">Dejanos tu mensaje</label>
-                            <textarea name="mensaje" id="mensaje" class="form-control" placeholder="Ej: Hola ¿Tienen reservas disponibles para el lunes?"></textarea>
-                        </div>
+                            <div class="text-center text-lg-start mb-2">
+                                <label for="apellido">Apellido</label>
+                                <input type="text" class="form-control" name="apellido" id="apellido" placeholder="ej: Pacheco">
+                            </div> 
 
-                        <div class="mb-4 mt-3 text-center text-lg-start">
-                            <button class="btn btn-lg bg-btn">Enviar</button>
-                        </div>
+                            <div class="text-center text-lg-start mb-2">
+                                <label for="correo">Correo electrónico</label>
+                                <input type="text" class="form-control" name="correo" id="correo" placeholder="ej: Gabrielpacheco@gmail.com">
+                            </div> 
+
+                            <div class="text-center text-lg-start mb-2">
+                                <label for="mensaje">Dejanos tu mensaje</label>
+                                <textarea name="mensaje" id="mensaje" class="form-control" placeholder="Ej: Hola ¿Tienen reservas disponibles para el lunes?"></textarea>
+                            </div>
+
+                            <div class="mb-4 mt-3 text-center text-lg-start">
+                                <button class="btn btn-lg bg-btn">Enviar</button>
+                            </div>
                         
-                    </form>
-
-
+                        </form>
+                    </div> 
                 </div>
-
-
-
-
-            </div> 
-
             </div>
         </section>
     </main>
 
+    <!--footer-->
+
     <footer class="footer">
         
-        <div class="row">
+        <div class="container-fluid">
+
+            <div class="row">
 
                 <div class="col-12 col-lg-4"> 
                     <h4 class="display-6 text-center text-lg-start fw-bold mt-5 mt-lg-2 mx-lg-3">Hotel Posada Las Lengas</h4>
@@ -139,9 +149,11 @@
                         </li>
                     </ul>
                 </div>
+            </div>
         </div>
 
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
