Corrección error header sección contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <meta name="description" content="Descubre nuestro hotel en 28 de Noviembre. Contamos con un restaurante que ofrece servicio de entrega a domicilio, para que puedas disfrutar de nuestras deliciosas comidas sin salir de tu habitación. ¡Contáctanos ahora!">">
+    <meta name="description" content="Descubre nuestro hotel en 28 de Noviembre. Contamos con un restaurante que ofrece servicio de entrega a domicilio, para que puedas disfrutar de nuestras deliciosas comidas sin salir de tu habitación. ¡Contáctanos ahora!">
     <title>Contacto para delivery en 28 de Noviembre | Hotel Posada Las Lengas</title>
 </head>
 <body>
