Arreglo min requerido type number del form

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,7 +92,7 @@
 
                             <div class="text-center text-lg-start mb-2">
                                 <label for="celular">Celular</label>
-                                <input type="number" class="form-control" name="celular" id="celular" placeholder="ej: +54 1121210101" required minlength="10" maxlength="15">
+                                <input type="number" class="form-control" name="celular" id="celular" placeholder="ej: +54 1121210101" required min="1000000000" max="999999999999999">
                             </div> 
 
                             <div class="text-center text-lg-start mb-2">
